--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -14,13 +14,12 @@ status-website:
   baseUrl: /uptime
   logoUrl: https://heartbeat.exchange/assets/beat.svg
   name: Heartbeat Uptime
-  introTitle: "**Upptime** is the open-source uptime monitor and status page, powered entirely by GitHub."
-  introMessage: This is a sample status page which uses **real-time** data from our [GitHub repository](https://github.com/upptime/upptime). No server required — just GitHub Actions, Issues, and Pages. [**Get your own for free**](https://github.com/upptime/upptime)
+  introTitle: "**Heartbeat** is the world's first prediction market that requires zero liquidity."
   navbar:
     - title: Status
       href: /
-    - title: GitHub
-      href: https://github.com/$OWNER/$REPO
+    - title: Heartbeat Home
+      href: https://heartbeat.exchange
 
 # Upptime also supports notifications, assigning issues, and more
 # See https://upptime.js.org/docs/configuration
