--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -10,8 +10,8 @@ sites:
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
   # Uncomment the `baseUrl` line if you don't have a custom domain and add your repo name there
-  # cname: demo.upptime.js.org
-  baseUrl: /uptime
+  cname: status.heartbeat.exchange
+  # baseUrl: /uptime
   logoUrl: https://heartbeat.exchange/assets/beat.svg
   name: Heartbeat Uptime
   introTitle: "**Heartbeat** is the world's first prediction market that requires zero liquidity."
